Fixing sonar problems #94